# safe_types

./: Cargo.toml
.github/workflows/: rust.yml
safe_types_derive/: Cargo.toml
safe_types_derive/src/: lib.rs
src/: array.rs  lib.rs  phantom_type.rs  refs.rs  sslice.rs  sstr.rs  sunit.rs  tuples.rs
src/std/: borrow.rs  boxed.rs  error.rs  mod.rs  option.rs  result.rs  sarcopaque.rs  vec.rs
src/std/fmt/: mod.rs  sformatter.rs
src/std/io/: mod.rs  serror.rs  serrorkind.rs  write.rs
src/std/net/: mod.rs  sipaddr.rs  sipv4addr.rs  sipv6addr.rs  sshutdown.rs  ssocketaddr.rs  ssocketaddrv4.rs  ssocketaddrv6.rs  stcpstream.rs
src/std/string/: mod.rs  sstring.rs
src/std/sync/: mod.rs  sarcopaque.rs
src/std/task/: mod.rs  scontext.rs  spoll.rs
src/std/time/: mod.rs  sduration.rs
src/tokio/net/: mod.rs  stcpstream.rs
tests/: ffi_safe.rs
